# mappingservice_plugin_boilerplate

./: .gitignore  README.md  plugin_wrapper.py  pyproject.toml  requirements.dev.txt
.github/workflows/: plugin-integration.yml
mappingservice-plugin/: .gitignore  build.gradle  settings.gradle
mappingservice-plugin/integrationtests/: basic.hurl
mappingservice-plugin/src/main/java/edu/kit/datamanager/mappingservice/plugins/boilerplate/: DemoPlugin.java
sample/: example_map.json  example_map.tsv  example_script.py
